--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".Featured"
+            android:label="@string/title_activity_featured"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".Favorites"
             android:label="@string/title_activity_favorites"
             android:parentActivityName=".MainActivity"
@@ -39,7 +44,6 @@
         <activity
             android:name=".BubbleTeaMap"
             android:label="@string/title_activity_bubble_tea_map" />
-
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
